Adding routes to support inventory and address creation
